# jerboa

./: .pylintrc  README.md  avsource.py  gui.py  prototype.py  pyproject.toml  setup.cfg  setup.py  test.py
resources/: common.qrc
src/jerboa/: __init__.py  avsource.py  downloader.py  log.py  logger.py  main.py  player.py  settings.py  signal.py  thread_pool.py  timeline.py  utils.py
src/jerboa/analysis/: __init__.py  algorithm.py  analysis.py  manager.py  option.py  parameter.py  registry.py  resource.py  runner.py  spectrogram.py  tfidf.py  tokenization.py
src/jerboa/analysis/algorithm/: option.py
src/jerboa/analysis/algorithms/: __init__.py  redundancy_remover.py  silence_remover.py
src/jerboa/analysis/algorithms/spectrogram/: algorithm.py
src/jerboa/analysis/run/: __init__.py  analysis.py  manager.py  resource.py  runner.py
src/jerboa/analysis/utils/: environment.py  tokenization.py
src/jerboa/av/: audio_buffer.py  avsource.py  video_buffer.py
src/jerboa/core/: __init__.py  circular_buffer.py  file.py  jbmath.py  logger.py  multithreading.py  process.py  settings.py  signal.py  timeline.py
src/jerboa/gui/: __init__.py  container.py  core.py  error_message_dialog.py  gui.py  main_page_stack.py  main_view_stack.py  main_window.py  menu_bar.py  palette.py  player_page.py  player_view.py  status_bar.py  thread_pool.py
src/jerboa/gui/analysis_algorithm_registry/: __init__.py  alg_config_dialog.py  dialog.py  env_config_dialog.py  env_prep_progress_dialog.py  grid.py
src/jerboa/gui/analysis_algorithm_selection/: __init__.py  dialog.py
src/jerboa/gui/common/: __init__.py  button_box.py  file.py  input_widget.py  page_stack.py  panel_stack.py  parameter.py  property.py  text.py
src/jerboa/gui/core/: __init__.py  multithreading.py  signal.py
src/jerboa/gui/media_source_selection/: __init__.py  dialog.py  resolver.py
src/jerboa/gui/resources/: __init__.py  common.py
src/jerboa/gui/resources/data/: __init__.py  common.py
src/jerboa/media/: __init__.py  av_to_jb.py  avsource.py  buffers.py  config.py  core.py  decoder.py  jb_to_av.py  mappers.py  media.py  normalized_audio.py  recognizer.py  reformatters.py  simple_decoder.py  skipping_decoder.py  source.py  standardized_audio.py  stretchers.py
src/jerboa/media/player/: __init__.py  audio_player.py  clock.py  media_player.py  player.py  state.py  timer.py  video_player.py
src/jerboa/media/player/decoding/: __init__.py  buffer.py  circular_buffer.py  context.py  decoder.py  frame.py  mapper.py  node.py  pipeline.py  reformatter.py  simple_decoder.py  skipping_decoder.py  streamer.py  task_queue.py  timeline_decoder.py
src/jerboa/media/player/decoding/pipeline/: __init__.py  context.py  mapper.py  node.py  pipeline.py
src/jerboa/media/player/decoding/util/: buffers.py  mappers.py  reformatters.py
src/jerboa/media/player/streaming/: __init__.py  streamer.py
src/jerboa/media/player/streaming/decoder/: decoder.py  jerboa_decoder.py  simple_decoder.py  skipping_decoder.py
src/jerboa/media/player/streaming/decoder/util/: buffers.py  mappers.py  reformatters.py
src/jerboa/media/readers/: __init__.py  audio.py  transcript.py
src/jerboa/media/source/: __init__.py  source.py
src/jerboa/media/source/decoder/: __init__.py  jerboa_decoder.py  nonlinear_decoder.py  simple_decoder.py  skipping_decoder.py
src/jerboa/media/source/decoder/util/: __init__.py  buffers.py  mappers.py  reformatters.py
src/jerboa/readers/: __init__.py  audio.py  transcript.py
src/jerboa/ui/: __init__.py  gui.py  ui.py  utils.py
src/jerboa/ui/gui/: __init__.py  gui.py  main_view_stack.py  menu_bar.py  player_view.py  view.py
src/jerboa/ui/gui/common/: __init__.py  button_box.py  file.py  property.py
src/jerboa/ui/gui/media_source_selection/: __init__.py  details_panel.py  dialog.py
src/jerboa/ui/gui/media_source_selection_dialog/: __init__.py  components.py  content_panels.py  details_panel.py  media_source_selection_dialog.py  media_stream_selection.py  media_stream_selector.py
src/jerboa/ui/gui/resources/: __init__.py  common.py
src/jerboa/ui/gui/resources/data/: common.py
src/jerboa/ui/gui_elements/: common.py
src/jerboa/ui/gui_elements/media_source_selection_dialog/: content_panels.py  media_source_selection_dialog.py  media_stream_selection.py
src/jerboa/utils/: __init__.py  circular_buffer.py  file.py  logger.py  math.py  time.py
tests/: common.py  test_circular_buffer.py  test_decoder.py  test_timeline.py
tests/avsource/: test_audio_buffer.py
tests/test_recordings/: README.md
