[metadata]
name = jerboa
version = file: VERSION
author = Paweł Głomski
author_email = pglomski.dev@gmail.com
description = Python media player capable of shortening/summarizing recordings 
long_description = file: README.md
long_description_content_type = text/markdown
license = 'AGPLv3'
license_files = LICENSE
url = https://github.com/pawel-glomski/jerboa/
classifiers =
  License :: OSI Approved :: GNU Affero General Public License v3
  Intended Audience :: Developers
  Intended Audience :: End Users/Desktop
  Topic :: Scientific/Engineering :: Information Analysis
  Topic :: Scientific/Engineering :: Artificial Intelligence
  Topic :: Multimedia :: Video :: Display
  Topic :: Multimedia :: Sound/Audio :: Players
  Programming Language :: Python :: 3

[options]
package_dir =
  = src
packages = find:

zip_safe = no
test_suite = tests
# some dependencies require <3.11
python_requires = >=3.10, <3.11
install_requires =
  pytest
  av
  ffmpeg
  pytsmod
  librosa
  youtube-dl
  numpy
  webvtt-py
  spacy
  transformers
  wget
  imgui
  pyglet
  PyOpenGL
  pylibrb

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
  jerboa = jerboa.main:main
