[metadata]
name = jerboa
version = file: VERSION
author = Paweł Głomski
author_email = pglomski.dev@gmail.com
description = Python media player capable of shortening/summarizing recordings 
long_description = file: README.md
long_description_content_type = text/markdown
license = 'AGPLv3'
license_files = LICENSE
url = https://github.com/pawel-glomski/jerboa/
classifiers =
  License :: OSI Approved :: GNU Affero General Public License v3
  Intended Audience :: Developers
  Intended Audience :: End Users/Desktop
  Topic :: Scientific/Engineering :: Information Analysis
  Topic :: Scientific/Engineering :: Artificial Intelligence
  Topic :: Multimedia :: Video :: Display
  Topic :: Multimedia :: Sound/Audio :: Players
  Programming Language :: Python :: 3

[options]
package_dir =
  = src
packages = find:

zip_safe = no
test_suite = tests

python_requires = >=3.11, <3.12
install_requires =
  dependency-injector
  loguru
  pydantic-settings
  av
  numpy
  PySide6
  pylibrb
  yt-dlp

[options.extras_require]
gmpy =
  gmpy2 # fast Fraction

spectrogram =
  pytorch

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
  jerboa = jerboa.main:main
